--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
+    "react-showdown": "^2.3.1",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.1.3",
     "reselect": "^4.1.5",
     "serve": "^13.0.2",
+    "showdown": "^2.0.0-alpha",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
